Fixed Version Issue
git-svn-id: file:///mnt/fast/tau2git/svnroot/trunk/tau2@7666 a8e31b63-e6ca-409b-a01b-2eec1b506579